<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="core_operations">Core Operations (Insurance &amp; Benefits)</string>
    <string name="social_protection">Social Protection</string>
    <string name="insurees_and_policies">Insurees and Policies</string>
    <string name="claims">Claims</string>

    <string name="monitoring_oversight">Monitoring &amp; Oversight</string>
    <string name="dashboards">Dashboards</string>
    <string name="tasks_management">Tasks Management</string>

    <string name="governance_support">Governance &amp; Support</string>
    <string name="legal_and_finance">Legal and Finance</string>
    <string name="grievance">Grievance</string>

    <string name="system_administration">System Administration</string>
    <string name="administration">Administration</string>
    <string name="tools">Tools</string>
    <string name="profile">Profile</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="settings">Settings</string>
    <string name="app_language">App Language</string>
    <string name="select_language">Select Language</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string-array name="language_codes">
        <item>am</item>
        <item>en</item>
        <item>fr</item>
        <item>es</item>
    </string-array>

</resources>