<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_core_operations"
        android:title="@string/core_operations">
        <menu>
            <item
                android:id="@+id/nav_social_protection"
                android:title="@string/social_protection"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/nav_insurees_policies"
                android:title="@string/insurees_and_policies"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/nav_claims"
                android:title="@string/claims"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_monitoring_oversight"
        android:title="@string/monitoring_oversight">
        <menu>
            <item
                android:id="@+id/nav_dashboards"
                android:title="@string/dashboards"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/nav_tasks_management"
                android:title="@string/tasks_management"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_governance_support"
        android:title="@string/governance_support">
        <menu>
            <item
                android:id="@+id/nav_legal_finance"
                android:title="@string/legal_and_finance"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/nav_grievance"
                android:title="@string/grievance"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_system_admin"
        android:title="@string/system_administration">
        <menu>
            <item
                android:id="@+id/nav_administration"
                android:title="@string/administration"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/nav_tools"
                android:title="@string/tools"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/nav_profile"
                android:title="@string/profile"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>