<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_appbar_no_collapse_no_tab"/>

        <LinearLayout
            android:id="@+id/setting_language_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_language_24"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/app_name"
                app:tint="?android:attr/textColorSecondary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/setting_language_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_language"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:id="@+id/setting_language_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="English"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="?android:attr/textColorSecondary" />
            </LinearLayout>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_keyboard_arrow_right_24"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/next"
                app:tint="?android:attr/textColorSecondary" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:id="@+id/setting_account_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_language_24"
                android:layout_marginEnd="16dp"
                android:contentDescription="Language Icon"
                app:tint="?android:attr/textColorSecondary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/setting_account_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:id="@+id/setting_account_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="?android:attr/textColorSecondary" />
            </LinearLayout>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_keyboard_arrow_right_24"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/next"
                app:tint="?android:attr/textColorSecondary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:layout_margin="16dp"
                android:id="@+id/create_account"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:layout_margin="16dp"
                android:id="@+id/import_account"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>
</ScrollView>